fixed header spacing issues

--- a/styleguide-embassy-free-mind.css
+++ b/styleguide-embassy-free-mind.css
@@ -43,7 +43,9 @@
         padding-inline: var(--spacing-s);
 
         @media (width > 900px) {
-            padding-inline: var(--spacing-m);
+            main {
+                padding-inline: var(--spacing-m);
+            }
         }
     }
 
